lambdas done, and some streams